# fa_maia_comercial

./: .gitignore  Dockerfile  README.md  main.py  notebook_apoio.ipynb  pyproject.toml
