[project]
name = "fa-maia-comercial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "apscheduler>=3.11.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "tiktoken>=0.11.0",
    "uvicorn[standard]>=0.35.0",
]
